--- a/birthday-wish/package.json
+++ b/birthday-wish/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^18.2.2",
     "bootstrap": "^5.3.5",
     "express": "^4.18.2",
+    "react": "^19.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
